--- a/05-StatisticalCorrection.Rmd
+++ b/05-StatisticalCorrection.Rmd
@@ -13,19 +13,19 @@ Statistical correction is necessary when meteorological data is available at a s
 
 Users of **meteoland** can choose between three different types of corrections:
 
-+ *Unbiasing*: consists in subtracting, from the series to be corrected, the average difference between the two series for the reference period (Deque 2007). Let $x_i$ be the value of the variable of the more accurate (e.g. local) series for a given day $i$ and $u_i$ the corresponding value for the less accurate series (e.g., climate model output). The bias, $\theta$, is the average difference over all $n$ days of the reference period:
++ *Unbiasing*: consists in subtracting, from the series to be corrected, the average difference between the two series for the reference period [@Deque2007]. Let $x_i$ be the value of the variable of the more accurate (e.g. local) series for a given day $i$ and $u_i$ the corresponding value for the less accurate series (e.g., climate model output). The bias, $\theta$, is the average difference over all $n$ days of the reference period:
 \begin{equation}
 \theta = \sum_{i}^{n}(u_i - x_i)/n
 \end{equation}
 The bias calculated in the reference period is then subtracted from the value of $u$ for any day of the period of interest.
 + *Scaling*: A slope is calculated by regressing $u$ on $x$ through the origin (i.e. zero intercept) using data of the reference period. The slope can then be used as scaling factor to multiply the values of $u$ for any day of the period of interest.
-+ *Empirical quantile mapping*: Due to its distributional properties, neither multiplicative or additive factors are appropriate for daily precipitation (Gudmundsson et al. 2012; Ruffault et al. 2014). In this case, it has been recommended to compare the empirical cumulative distribution function (CDF) of the two series for the reference period (Déqué 2007). The empirical CDFs of $x$ and $u$ for the reference period are approximated using tables of empirical percentiles, and this mapping is used to correct values of $u$ for the period of interest:
++ *Empirical quantile mapping*: Due to its distributional properties, neither multiplicative or additive factors are appropriate for daily precipitation [@Gudmundsson2012; @Ruffault2014]. In this case, it has been recommended to compare the empirical cumulative distribution function (CDF) of the two series for the reference period [@Deque2007]. The empirical CDFs of $x$ and $u$ for the reference period are approximated using tables of empirical percentiles, and this mapping is used to correct values of $u$ for the period of interest:
 \begin{equation}
 c_d = ecdf_x^{-1}(ecdf_u(u_d))
 \end{equation}
-where $ecdf_x$ and $ecdf_u$ are the empirical CDFs of $x$ and $u$ respectively. Values between percentiles are approximated using linear interpolation. A difficulty arises for quantile mapping when the variables bounded by zero, such as precipitation. As the models tend to drizzle (or may have lower frequency of precipitation events), the probability of precipitation in the model may be greater or lower than that observed. To correct this, when model precipitation is zero an observed value is randomly chosen in the interval where the observed cumulative frequency is less than or equal to the probability of no precipitation in the model. This procedure ensures that the probability of precipitation after correction is equal to that observed (Boé 2007).
+where $ecdf_x$ and $ecdf_u$ are the empirical CDFs of $x$ and $u$ respectively. Values between percentiles are approximated using linear interpolation. A difficulty arises for quantile mapping when the variables bounded by zero, such as precipitation. As the models tend to drizzle (or may have lower frequency of precipitation events), the probability of precipitation in the model may be greater or lower than that observed. To correct this, when model precipitation is zero an observed value is randomly chosen in the interval where the observed cumulative frequency is less than or equal to the probability of no precipitation in the model. This procedure ensures that the probability of precipitation after correction is equal to that observed [@Boe2007].
 
-For each target location to be processed, the correction routine first determines which is the nearest climate model cell and extracts its weather data series for the reference period and the period of interest. Then, the correction method chosen by the user for each variable is applied. Statistical corrections are done for each of the twelve months separately to account for seasonal variation of distributional differences (Ruffault et al 2014).
+For each target location to be processed, the correction routine first determines which is the nearest climate model cell and extracts its weather data series for the reference period and the period of interest. Then, the correction method chosen by the user for each variable is applied. Statistical corrections are done for each of the twelve months separately to account for seasonal variation of distributional differences [@Ruffault2014].
 
 
 ## Default approaches by variable
