--- a/06-PotentialEvapotranspiration.Rmd
+++ b/06-PotentialEvapotranspiration.Rmd
@@ -1,10 +1,10 @@
 # Estimation of potential evapo-transpiration {#potentialevapotranspiration}
 
-Package **meteoland** allows calculating daily potential evapo-transpiration (PET) using Penman's formulation (Penman 1948; 1956) or Penman-Monteith formulation. PET is automatically calculated after meteorological data have been interpolated (i.e. within functions `interpolationpoints()` and `interpolationgrid()`) or downscaled (i.e. within functions `correctionpoints()` and `correctiongrid()`), but PET values can also be calculated for a single point using functions `penman()` or `penmanmonteith()`. For other formulations of PET, the reader is referred to the R package [**Evapotranspiration**](https://cran.r-project.org/package=Evapotranspiration).
+Package **meteoland** allows calculating daily potential evapo-transpiration (PET) using Penman's formulation [@Penman1948; @Penman1956] or Penman-Monteith formulation. PET is automatically calculated after meteorological data have been interpolated (i.e. within functions `interpolationpoints()` and `interpolationgrid()`) or downscaled (i.e. within functions `correctionpoints()` and `correctiongrid()`), but PET values can also be calculated for a single point using functions `penman()` or `penmanmonteith()`. For other formulations of PET, the reader is referred to the R package [**Evapotranspiration**](https://cran.r-project.org/package=Evapotranspiration).
 
 ## Penman formulation
 
-Penman (1948) proposed an equation to calculate daily potential evaporation that combined an energy equation based on net incoming radiation with an aerodynamic approach. The Penman or Penman combination equation is:
+Penman [-@Penman1948] proposed an equation to calculate daily potential evaporation that combined an energy equation based on net incoming radiation with an aerodynamic approach. The Penman or Penman combination equation is:
 \begin{equation}
 E_{pot} = \frac{\Delta}{\Delta+\gamma}\cdot \frac{R_n}{\lambda}+\frac{\lambda}{\Delta + \lambda}\cdot E_a
 \end{equation}
@@ -12,12 +12,12 @@ where $PET$ is the daily potential evaporation (in $mm \cdot day^{-1}$) from a s
 \begin{equation}
 E_a = f(u) \cdot D = f(u) \cdot (v_a^*-v_a)
 \end{equation}
-where $v_a^*$ is the saturation vapour pressure ($kPa$) and $v_a$ the actual vapour pressure ($kPa$) and $f(u)$ is a function of wind speed, for which there are two alternatives (Penman 1948; 1956):
+where $v_a^*$ is the saturation vapour pressure ($kPa$) and $v_a$ the actual vapour pressure ($kPa$) and $f(u)$ is a function of wind speed, for which there are two alternatives [@Penman1948; @Penman1956]:
 \begin{eqnarray}
 f(u) &=& 1.313 + 1.381 \cdot u\\
 f(u) &=& 2.626 + 1.381 \cdot u
 \end{eqnarray}
-If wind speed is not available, an alternative formulation for $E_{pot}$ is used as an approximation (Valiantzas 2006):
+If wind speed is not available, an alternative formulation for $E_{pot}$ is used as an approximation [@Valiantzas2006]:
 \begin{equation}
 PET \simeq 0.047\cdot R_s \cdot (T_a+9.5)^{0.5}-2.4\cdot (\frac{R_s}{R_{pot}})^2+0.09\cdot(T_a-20)\cdot(1-\frac{RH_{mean}}{100})
 \end{equation}
