--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ author: "Miquel De Cáceres"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
-bibliography: [book.bib]
+bibliography: [meteoland.bib]
 biblio-style: apalike
 link-citations: yes
 description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
@@ -14,3 +14,4 @@ description: "This is a minimal example of using the bookdown package to write a
 library(meteoland)
 ```
 
+# Preface {-}
